# rumie-core

./: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: build-push.yml
app/: main.py
app/api/: auth.py  conversations.py  discovery.py  groups.py  health.py  inquiries.py  invites.py  listings.py  router.py  swipes.py  uploads.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  conversation.py  group.py  inquiry.py  invite.py  listing.py  message.py  swipe.py  token.py  user.py
app/schemas/: auth.py  conversation.py  group.py  inquiry.py  invite.py  listing.py  swipe.py
app/services/: conversations.py  matching.py  storage.py
cloudflared/: config.yml  credentials.json.example
tests/: conftest.py  test_integration_auth.py  test_integration_merge.py  test_matching.py  test_presign_url.py  test_security.py  test_snake_case.py
