[project]
name = "rumie-core"
version = "0.1.0"
description = "Rumie.xyz backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "beanie>=1.27,<2",
    "motor>=3.6,<4",
    "pymongo>=4.9",
    "pyjwt[crypto]>=2.9",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
    "minio>=7.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
